Included analysis of non-leaking third parties

--- a/Analysis/analysisVisualisation.ipynb
+++ b/Analysis/analysisVisualisation.ipynb
@@ -1440,8 +1440,8 @@
       "adnxs.com            &     527 \\\\\n",
       "clarity.ms           &     496 \\\\\n",
       "pinimg.com           &     469 \\\\\n",
-      "rlcdn.com            &     464 \\\\\n",
       "casalemedia.com      &     464 \\\\\n",
+      "rlcdn.com            &     464 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n",
       "\n"
@@ -1523,6 +1523,41 @@
     "print(f'(Neither through referrer nor request URL)\\n')\n",
     "\n",
     "print(diff_df.nlargest(n=20, columns=['Amount']).to_latex())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of websites with >= 1 full (domain) block: 2928\n",
+      "Number of websites never leaking to domain: 193\n"
+     ]
+    }
+   ],
+   "source": [
+    "blocking_domains = set()\n",
+    "domain_block_lookup = analysis.get_leak_block_domain_lookup()\n",
+    "for domain in diffDict:\n",
+    "    for block_domain in domain_block_lookup:\n",
+    "        if domain in domain_block_lookup[block_domain]['block']:\n",
+    "            blocking_domains.add(block_domain)\n",
+    "print(f'Number of websites with >= 1 full (domain) block: {len(blocking_domains)}')\n",
+    "\n",
+    "non_leaking_domains = set()\n",
+    "for block_domain, third_parties in domain_block_lookup.items()  :\n",
+    "    if not third_parties['leak'] and third_parties['block']:\n",
+    "        non_leaking_domains.add(block_domain)\n",
+    "print(f'Number of websites never leaking to domain: {len(non_leaking_domains)}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -1660,19 +1695,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of websites with >= 1 full (org) block: 2514\n"
+     ]
+    }
+   ],
+   "source": [
+    "blocking_orgs = set()\n",
+    "org_block_lookup = analysis.get_leak_block_org_lookup()\n",
+    "for org in orgDiffDict:\n",
+    "    for block_org in org_block_lookup:\n",
+    "        if org in org_block_lookup[block_org]['block']:\n",
+    "            blocking_orgs.add(block_org)\n",
+    "print(f'Number of websites with >= 1 full (org) block: {len(blocking_orgs)}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "outputs": [
     {
      "data": {
       "text/plain": "6296"
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(usage_counter.total.items())"
+    "len(usage_counter.total.items())\n",
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
